Fix alignment for new decoration method
- I happen to have been developing on "seti" theme which has an issue
  with spacing when compared to one dark, atom material and others.

--- a/styles/.atom-text-editor.less
+++ b/styles/.atom-text-editor.less
@@ -15,7 +15,6 @@
     color: @base-background-color;
     background: @text-color;
     position: absolute;
-    left: 10px;
     vertical-align: bottom;
     transform: translate(0, -100%);
     padding: .15em;
